# easycrypto

./: .env.local  README.md  easycrypto.senhub.json  package.json
app/: package-lock.json
app/src/: bootstrap.app.tsx
app/src/components/: exploreAddress.tsx
app/src/model/: common.ts  index.ts  orders.controller.ts
app/src/pages/: createOrder.tsx  loan-requests.tsx  orderDetail.tsx
app/src/watcher/: contract.watcher.tsx  order.watcher.tsx
sdk/: Anchor.toml  Makefile  package-lock.json  package.json  tsconfig.json
sdk/app/: index.ts
sdk/programs/easycrypto-sdk/: Cargo.toml
sdk/programs/easycrypto-sdk/src/: constants.rs  errors.rs  lib.rs
sdk/programs/easycrypto-sdk/src/instructions/: approve_contract.rs  cancel_contract.rs  cancel_order.rs  claim_contract.rs  initialize_contract.rs  initialize_order.rs  mod.rs  repay_contract.rs
sdk/programs/easycrypto-sdk/src/schema/: contract.rs  mod.rs  order.rs
sdk/tests/: easycrypto-sdk.ts
src/: app.css
src/components/Common/: AppFooter.tsx  ContractStateTag.tsx  Logo.tsx  Navigation.tsx  OrderStateTag.tsx
src/components/CreateOrderPage/: OrderStep.tsx  StepTwo.tsx  index.tsx
src/components/HomePage/: Cover.tsx  HeroImage.tsx  Process.tsx  Reviews.tsx  WhyUs.tsx
src/components/LoanOffersPage/: index.tsx
src/hooks/: useContracts.ts  useEasyCrypto.ts  useOrders.ts  useProgram.ts
src/model/: contracts.controller.ts
src/pages/: createContract.tsx  easyCrypto.tsx  index.tsx  loan-offers.tsx  your-lending.tsx  your-loan.tsx
src/shared/: utils.ts
src/watcher/: watcher.tsx
(+22 files in other folders)
